force-app/main/default/objects/VGSO_Email__mdt/VGSO_Email__mdt.object-meta.xml
<CustomObject>
    <description>Email addresses to store VGSO email addresses</description>
    <label>VGSO Email</label>
    <pluralLabel>VGSO Emails</pluralLabel>
</CustomObject>