force-app/main/default/objects/VGSO_Email__mdt/fields/Additional_Recipient_One__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recipient_One__c</fullName>
    <description>Normally lina.maggiore@vgso.vic.gov.au, can be changed for testing</description>
    <label>Additional Recipient One</label>
    <type>Email</type>
</CustomField>