force-app/main/default/objects/VGSO_Email__mdt/fields/Additional_Recipient_Two__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recipient_Two__c</fullName>
    <description>Normally alison.fernandes@vgso.vic.gov.au, can be changed for testing</description>
    <label>Additional Recipient Two</label>
    <type>Email</type>
</CustomField>