force-app/main/default/objects/VGSO_Email__mdt/fields/Central_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Central_Mailbox__c</fullName>
    <description>Normally CPTWorkRequests@vgso.vic.gov.au, can be set to a test email address</description>
    <label>Central Mailbox</label>
    <required>true</required>
    <type>Email</type>
</CustomField>